--- a/tests/test.yml
+++ b/tests/test.yml
@@ -7,6 +7,6 @@
   pre_tasks:
     - file: name="/etc/logrotate.d" state=directory owner="root" group="root" mode="0755"
     - file: name="/etc/ansible/templates/external_collectors" state=directory owner="root" group="root" mode="0755"
-    - file: name="/etc/ansible/templates/external_collectors/sample_metric.sh.j2" state=touch owner="root" group="root" mode="0640"
+    - copy: content="Nothing here" dest="/etc/ansible/templates/external_collectors/sample_metric.sh.j2" owner="root" group="root" mode="0644"
   roles:
     - ansible-role-update_scollector_config
