--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -30,4 +30,5 @@ _scollector:
       }
     collectors:
       - { metric: sample.metric, interval: 60, template: sample_metric.sh.j2, filename: sample_metric.sh }
-
+    metric_metadata:
+      - { metric: sample_metric, ratetype: gauge, unit: "days", desc: "Days until expiration" }
