Allow configuration of MaxQueueLen
Especially on smaller EC2 instances, the memory footprint of
the scollector can become problematic when Bosun does not accept
metrics temporarily. This allows overriding the number of metrics
scollector keeps in memory before dropping them in case there is
no server available.

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -12,6 +12,7 @@ _scollector:
   hostname: "{{ ansible_hostname }}"
   domain: "example.com"
   hostgroup: "example_hosts"
+  max_queue_len: 200000
   external_collectors:
     dir: "/usr/share/external_collectors"
     template: |+
