[#170924685] TRV: Matrix Build - no more trusty

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,7 @@ addons:
 install:
   # Install ansible
   - pip install "$ANSIBLE_PIP"
+  - pip install yamllint
 
   # Check ansible version
   - ansible --version
