[#171099862] TRV: Use Ansible uri instead of curl
Makes the code more readable and takes care of the JSON encoding for us.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,34 +2,63 @@
 
 - block:
     - name: Create external collectors directory
-      file: path="{{ _scollector.external_collectors.dir }}" state=directory owner=root group=root mode=0755
+      file:
+        path: "{{ _scollector.external_collectors.dir }}"
+        state: directory
+        owner: root
+        group: root
+        mode: 0755
 
     - name: Create external collectors interval directories
-      file: path="{{ _scollector.external_collectors.dir }}/{{ item.interval }}" state=directory owner=root group=root mode=0755
+      file:
+        path: "{{ _scollector.external_collectors.dir }}/{{ item.interval }}"
+        state: directory
+        owner: root
+        group: root
+        mode: 0755
       with_items: "{{ _scollector.external_collectors.collectors }}"
 
     - name: Create external collectors
-      template: src="/etc/ansible/templates/external_collectors/{{ item.template }}" dest="{{ _scollector.external_collectors.dir }}/{{ item.interval }}/{{ item.filename }}" owner=root group=root mode=0750
+      template:
+        src: "/etc/ansible/templates/external_collectors/{{ item.template }}"
+        dest: "{{ _scollector.external_collectors.dir }}/{{ item.interval }}/{{ item.filename }}"
+        owner: root
+        group: root
+        mode: 0750
       with_items: "{{ _scollector.external_collectors.collectors }}"
 
   when: _scollector.external_collectors is defined
 
 - name: Create scollector configuration file
-  template: src="{{ item }}.j2" dest="/{{ item }}" owner=root group=root mode=0640
+  template:
+    src: "{{ item }}.j2"
+    dest: "/{{ item }}"
+    owner: root
+    group: root
+    mode: 0640
   with_items:
     - "etc/bosun/scollector.conf"
 
 - block:
-    - set_fact:
-        curl_auth: "--user '{{ _scollector.auth.user }}:{{ _scollector.auth.password }}'"
-      when: _scollector.auth is defined
-
     - name: Announce Meta data of external collector metrics
-      run_once: True
-      command: >
-        curl -w "%{http_code}" {{ curl_auth|default("") }} -H "Content-Type: application/json" -X POST -d '[ { "metric": "{{ item.metric }}", "name": "rate", "value": "{{ item.ratetype }}" }, { "metric": "{{ item.metric }}", "name": "unit", "value": "{{ item.unit }}" }, { "metric": "{{ item.metric }}", "name": "desc", "value": "{{ item.desc|default('') }}" } ]' {{ _scollector.server.protocol|default("https") }}://{{ _scollector.server.ip }}:{{ _scollector.server.port }}/api/metadata/put
-      register: result
-      failed_when: result.stdout != "204"
+      run_once: true
+      uri:
+        method: POST
+        url: "{{ _scollector.server.protocol|default('https') }}://{{ _scollector.server.ip }}:{{ _scollector.server.port }}/api/metadata/put"
+        url_username: "{{ _scollector.auth.user }}"
+        url_password: "{{ _scollector.auth.password }}"
+        body_format: json
+        body:
+          - metric: "{{ item.metric }}"
+            name: "rate"
+            value: "{{ item.ratetype }}"
+          - metric: "{{ item.metric }}"
+            name: "unit"
+            value: "{{ item.unit }}"
+          - metric: "{{ item.metric }}"
+            name: "desc"
+            value: "{{ item.desc|default('') }}"
+        status_code: 204
       with_items: "{{ _scollector.external_collectors.metric_metadata }}"
       ignore_errors: yes
 
