[#173358475] ASP: ensure upstart override exists and add systemd oom switch

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -39,15 +39,36 @@
   with_items:
     - "etc/bosun/scollector.conf"
 
-- name: Check if init (override) file for scollector exists
-  stat:
-    path: /etc/init/scollector.override
-  register: stat_scollector_override
-  when: _scollector.oom_score_adj is defined
+- block:
+    - name: Check if init (override) file for scollector exists
+      stat:
+        path: /etc/init/scollector.override
+      register: stat_scollector_override
 
-- name: Set oom score for scollector
-  lineinfile: dest="{{ stat_scollector_override.stat.path }}" state=present regexp='^oom score' line="oom score {{ _scollector.oom_score_adj }}"
-  when: _scollector.oom_score_adj is defined and stat_scollector_override.stat.exists
+    - name: Set oom score for scollector in Upstart
+      lineinfile: 
+        dest: "{{ stat_scollector_override.stat.path }}" 
+        state: present 
+        regexp: '^oom score' 
+        line: "oom score {{ _scollector.oom_score_adj }}"
+      when: stat_scollector_override.stat.exists
+  when: _scollector.oom_score_adj is defined and ansible_service_mgr == "upstart"
+
+- block:
+    - name: Check if SystemD Unit file for scollector exists
+      stat:
+        path: /etc/systemd/system/scollector.service
+      register: stat_scollector_systemd
+
+    - name: Set oom score for scollector in systemd
+      lineinfile:
+        dest: "/etc/systemd/system/scollector.service"
+        state: present
+        regexp: '^OOMScoreAdjust='
+        line: "OOMScoreAdjust={{ _scollector.oom_score_adj }}"
+        insertafter: '^\[Service\]'
+      when: stat_scollector_systemd.stat.exists
+  when: _scollector.oom_score_adj is defined and ansible_service_mgr == "systemd"
 
 - block:
     - name: Announce Meta data of external collector metrics
