[#173358475] ASP: reload systemd service files after change

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -67,7 +67,13 @@
         regexp: '^OOMScoreAdjust='
         line: "OOMScoreAdjust={{ _scollector.oom_score_adj }}"
         insertafter: '^\[Service\]'
+      register: systemd_reload
       when: stat_scollector_systemd.stat.exists
+
+    - name: Reload service definitions
+      systemd:
+        daemon_reexec: yes
+      when: systemd_reload.changed
   when: _scollector.oom_score_adj is defined and ansible_service_mgr == "systemd"
 
 - block:
