[#184060833] Lint Fixes on role

--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,16 +1,19 @@
 ---
-allow_duplicates: yes
 galaxy_info:
   author: Daniel Schneller
+  namespace: rheinwerk
+  role_name: update_scollector_config
   description: Configures scollector
   company: Rheinwerk
   license: license (GPLv3)
-  min_ansible_version: 2.3
+  min_ansible_version: 2.9.0
+  #  we don't want to provide credentials for testing, skip molecule tests
+  min_ansible_container_version: "X"
   platforms:
-  - name: Ubuntu
-    versions:
-    - trusty
-    - bionic
+    - name: Ubuntu
+      versions:
+        - focal
+        - jammy
   galaxy_tags:
     - bosun
     - scollector
