--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,6 +1,7 @@
 # vim: ft=ansible:et:ts=2
 
-- block:
+- name: Configure external_collectors
+  block:
     - name: Create external collectors directory
       file:
         path: "{{ _scollector.external_collectors.dir }}"
@@ -39,7 +40,8 @@
   with_items:
     - "etc/bosun/scollector.conf"
 
-- block:
+- name: Configure OOM Score Upstart
+  block:
     - name: Check if init (override) file for scollector exists
       stat:
         path: /etc/init/scollector.override
@@ -55,14 +57,15 @@
       when: not stat_scollector_override.stat.exists
 
     - name: Set oom score for scollector in Upstart
-      lineinfile: 
+      lineinfile:
         dest: /etc/init/scollector.override
-        state: present 
-        regexp: '^oom score' 
+        state: present
+        regexp: '^oom score'
         line: "oom score {{ _scollector.oom_score_adj }}"
   when: _scollector.oom_score_adj is defined and ansible_service_mgr == "upstart"
 
-- block:
+- name: Configure OOM Score SystemD
+  block:
     - name: Check if SystemD Unit file for scollector exists
       stat:
         path: /etc/systemd/system/scollector.service
@@ -84,12 +87,13 @@
       when: systemd_reload.changed
   when: _scollector.oom_score_adj is defined and ansible_service_mgr == "systemd"
 
-- block:
-    - name: Announce Meta data of external collector metrics
+- name: Announce external_collectors metric_metadata
+  block:
+    - name: Announce Meta data of external collector metrics # noqa ignore-errors
       run_once: true
       uri:
         method: POST
-        url: "{{ _scollector.server.protocol|default('https') }}://{{ _scollector.server.ip }}:{{ _scollector.server.port }}/api/metadata/put"
+        url: "{{ _scollector.server.protocol | default('https') }}://{{ _scollector.server.ip }}:{{ _scollector.server.port }}/api/metadata/put"
         url_username: "{{ _scollector.auth.user }}"
         url_password: "{{ _scollector.auth.password }}"
         body_format: json
@@ -102,7 +106,7 @@
             value: "{{ item.unit }}"
           - metric: "{{ item.metric }}"
             name: "desc"
-            value: "{{ item.desc|default('') }}"
+            value: "{{ item.desc | default('') }}"
         status_code: 204
       with_items: "{{ _scollector.external_collectors.metric_metadata }}"
       ignore_errors: yes
