--- a/tests/test.yml
+++ b/tests/test.yml
@@ -5,9 +5,9 @@
   become_user: root
 
   pre_tasks:
-    - file: name="/etc/logrotate.d" state=directory owner="root" group="root" mode="0755"
-    - file: name="/etc/bosun" state=directory owner="root" group="root" mode="0755"
-    - file: name="/etc/ansible/templates/external_collectors" state=directory owner="root" group="root" mode="0755"
-    - copy: content="Nothing here" dest="/etc/ansible/templates/external_collectors/sample_metric.sh.j2" owner="root" group="root" mode="0644"
+    - ansible.builtin.file: name="/etc/logrotate.d" state=directory owner="root" group="root" mode="0755"
+    - ansible.builtin.file: name="/etc/bosun" state=directory owner="root" group="root" mode="0755"
+    - ansible.builtin.file: name="/etc/ansible/templates/external_collectors" state=directory owner="root" group="root" mode="0755"
+    - ansible.builtin.copy: content="Nothing here" dest="/etc/ansible/templates/external_collectors/sample_metric.sh.j2" owner="root" group="root" mode="0644"
   roles:
     - ansible-role-update_scollector_config
